SPA-11332  Tablet - Android/iPad - spinner is squashed and no longer spins

--- a/app/css/less/bootstrap-451.css
+++ b/app/css/less/bootstrap-451.css
@@ -6819,38 +6819,6 @@ select.ng-invalid:invalid:invalid:focus {
     text-shadow: 0 0 0 #4d4d4d;
   }
 }
-@-webkit-keyframes rockstep {
-  from {
-    -webkit-transform: rotate(0deg);
-  }
-  to {
-    -webkit-transform: rotate(359deg);
-  }
-}
-@-moz-keyframes rockstep {
-  from {
-    -moz-transform: rotate(0deg);
-  }
-  to {
-    -moz-transform: rotate(359deg);
-  }
-}
-@-o-keyframes rockstep {
-  from {
-    -o-transform: rotate(0deg);
-  }
-  to {
-    -o-transform: rotate(359deg);
-  }
-}
-@keyframes rockstep {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(359deg);
-  }
-}
 .order-cloud-image {
   width: 100%;
   height: 100%;
@@ -8387,23 +8355,19 @@ select.ng-invalid:invalid:invalid:focus {
   background-color: #e4f2f9;
   opacity: .75;
 }
-.app-loading-indicator-cell:after {
-  content: "";
+.app-loading-indicator-cell i {
   position: absolute;
   top: 49%;
   left: 49%;
-  height: 25px;
-  width: 25px;
   margin-top: -15px;
-  -webkit-animation: rockstep .8s infinite linear;
-  -moz-animation: rockstep .8s infinite linear;
-  -o-animation: rockstep .8s infinite linear;
-  animation: rockstep .8s infinite linear;
-  border-left: 3px solid rgba(0, 174, 239, 0.15);
-  border-right: 3px solid rgba(0, 174, 239, 0.15);
-  border-bottom: 3px solid rgba(0, 174, 239, 0.15);
-  border-top: 3px solid #154964;
-  border-radius: 100%;
+  font-size: 24px;
+  color: #0c2a3a;
+}
+.app-loading-indicator-cell i.fa-spin {
+  -webkit-animation: 2s linear 0s normal none infinite spin;
+  -moz-animation: 2s linear 0s normal none infinite spin;
+  -o-animation: 2s linear 0s normal none infinite spin;
+  animation: 2s linear 0s normal none infinite spin;
 }
 .app-loading-indicator-cell p {
   background-color: #e4f2f9;
